2007-04-23  Adele Peterson  <adele@apple.com>

        Reviewed by Hyatt & Adam.

        Tests for <rdar://problem/4807799> REGRESSION: calling select() in onSearch handler doesn't work if you hit enter to trigger the event

        * fast/events/onchange-passwordfield-expected.txt:
        * fast/events/onchange-passwordfield.html:
        * fast/events/onchange-searchfield-expected.txt:
        * fast/events/onchange-searchfield.html:
        * fast/events/onchange-select-popup-expected.txt: Added.
        * fast/events/onchange-select-popup.html: Added.
        * fast/events/onchange-textfield-expected.txt:
        * fast/events/onchange-textfield.html:
        * fast/forms/onchange-enter-submit-expected.txt:

2007-04-23  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - test for <rdar://problem/4840688> REGRESSION (r10588, r10621): JavaScript won't parse
          modifications of non-references (breaks 300themovie.warnerbros.com, fedex.com)

        * fast/js/modify-non-references-expected.txt: Added.
        * fast/js/modify-non-references.html: Added.
        * fast/js/resources/modify-non-references.js: Added.

        * fast/js/assign-expected.txt: Updated for different exception text.
        * fast/js/postfix-syntax-expected.txt: Ditto.
        * fast/js/prefix-syntax-expected.txt: Ditto.

2007-04-23  Darin Adler  <darin@apple.com>

        Reviewed by Hyatt.

        - test changes for rename of box-sizing to -webkit-box-sizing

        * fast/borders/border-fit.html: Rename.
        * fast/box-sizing/box-sizing.html: Ditto.
        * fast/box-sizing/panels-one.html: Added -webkit-box-sizing.
        * fast/box-sizing/panels-two.html: Ditto.
        * fast/box-sizing/percentage-height.html: Renamed -khtml-box-sizing to -webkit-box-sizing.
        * fast/css/computed-style-expected.txt: Updated for different name and place in sorting order.
        * tables/mozilla/core/box_sizing.html: Rename.
