@@ -1,6 +1,9 @@
 This test verifies that the ENTER key fires the change event for popups.
 
 
+
 PASS: change event fired.
+
+blur event fired.
 
 
